# Resume

./: .env.example  .gitignore  Makefile  docker-compose.yml
ai-service/: Dockerfile  main.py  requirements.txt
ai-service/agents/: jd_extractor.py  resume_optimizer.py
ai-service/models/: schemas.py
ai-service/prompts/: templates.py
ai-service/rag/: pipeline.py
ai-service/tests/: conftest.py  test_api_endpoints.py  test_jd_extractor.py  test_rag_pipeline.py  test_resume_optimizer.py
backend/: CMakeLists.txt  Dockerfile  config.json  main.cpp
backend/src/controllers/: AuthController.cc  AuthController.h  ExportController.cc  ExportController.h  JDController.cc  JDController.h  ResumeController.cc  ResumeController.h  TemplateController.cc  TemplateController.h
backend/src/exporters/: DOCXExporter.cc  DOCXExporter.h  IDocumentExporter.h  TeXExporter.cc  TeXExporter.h
backend/src/filters/: JWTFilter.cc  JWTFilter.h
backend/src/utils/: HttpClient.cc  HttpClient.h  JWTHelper.cc  JWTHelper.h
backend/tests/: CMakeLists.txt  test_docx_exporter.cpp  test_jwt_helper.cpp  test_tex_exporter.cpp
database/migrations/: 001_init.sql
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/ai/extract-jd/: route.ts
frontend/app/api/ai/optimize/: route.ts
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/editor/[id]/: page.tsx
frontend/app/templates/: page.tsx
frontend/components/: Logo.tsx
frontend/components/ATSScoreMeter/: index.tsx
frontend/components/AuthModal/: index.tsx
frontend/components/ExportPanel/: index.tsx
frontend/components/JDAnalyzer/: index.tsx
frontend/components/OnboardingFlow/: index.tsx
frontend/components/ResumeEditor/: SectionEditor.tsx  index.tsx
frontend/components/ResumePreview/: index.tsx
frontend/components/SectionDiff/: index.tsx
frontend/components/SessionSync/: index.tsx
frontend/components/TemplateGallery/: index.tsx
frontend/components/ui/: Badge.tsx  ErrorBoundary.tsx  Skeleton.tsx
frontend/lib/: api.ts  authConfig.ts  exportResume.ts  resumeDb.ts  supabase.ts  templates.ts  types.ts  utils.ts
frontend/store/: authStore.ts  localResumeStore.ts  resumeStore.ts
tests/: package.json  playwright.config.ts
tests/e2e/: auth.setup.ts  auth.spec.ts  dashboard.spec.ts  editor.spec.ts  export.spec.ts  jd-optimizer.spec.ts
tests/fixtures/: test-data.ts
